--- a/jquery.html
+++ b/jquery.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <script src="jquery-3.7.1.min.js"></script>
+        <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
 
     </head>
     <style>
